Modify for zgc